--- a/INSTALL
+++ b/INSTALL
@@ -58,6 +58,6 @@ echo "DIR=\$( cd \"\$( dirname \"\${BASH_SOURCE[0]}\" )\" && pwd ) \n export PYT
 
 # USAGE EXAMPLE from the metalibm-lugdunum directory
 # source metalibm_setup_env.bash
-# python metalibm_functions/ml_exp.py --target x86_fma --output x86_fma_exp2d.c
-# python metalibm_functions/ml_exp.py --disable-fma --target x86_sse41 --output x86_sse41_exp2d.c
+# python functions/ml_exp.py --target x86_fma --output x86_fma_exp2d.c
+# python functions/ml_exp.py --disable-fma --target x86_sse41 --output x86_sse41_exp2d.c
 
